Add sample stream + watch feature on WatchResources

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,15 @@
 {
+  "Urls": "http://0.0.0.0:50052",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
+      "Url": "http://localhost:50052",
       "Protocols": "Http2"
     }
   }
